# cmake-cpp-project-seed

./: .clang-format  CMakeLists.txt  bitbucket-pipelines.yml  readme.md
application/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake
